--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MedDo</string>
     <string name="action_settings">Settings</string>
     <string name="back">Back</string>
+    <string name="signup">Signup</string>
 </resources>
